# snouty

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: api.rs  error.rs  main.rs  params.rs  params_schema.json
tests/: cli.rs
