[package]
name = "snouty"
version = "0.1.10"
edition = "2024"
description = "A CLI tool for interacting with the Antithesis API"
license = "Apache-2.0"
repository = "https://github.com/orbitinghail/snouty"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
json5 = "1.3.0"
jsonschema = "0.38.0"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "=0.6.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
